--- a/scss/modules/page_pcOfertas/_mainPcOfertas.scss
+++ b/scss/modules/page_pcOfertas/_mainPcOfertas.scss
@@ -75,17 +75,20 @@
         img{
             width: 40vh;
             height: 40vh;
+            margin-right: 5vh;
         }
         
-        div{
-            
-            div{
+        #infoPcOferta{
+            width: 80vh;
+            #tituloPcOferta{
                 display: flex;
                 align-items: center; 
                 justify-content: start;
 
+
                 h3{
                     margin-right: 2vh;
+                    font-size: 1rem;
                 }
                 p{
                     
@@ -154,4 +157,426 @@
        
       
     
+}
+
+@media (max-width: 1700px){
+    #mainPagePcOfertas{
+        display: flex;
+        flex-wrap: wrap;
+        aside{
+            margin-left: 5vh;
+            h2{
+                font-family: lemon-login;
+            }
+        }
+    }
+
+    #secPcOferta{
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 40vh;
+            height: 40vh;
+            margin-right: 5vh;
+        }
+        
+        #infoPcOferta{
+            width: 70vh;
+
+            #tituloPcOferta{
+                display: flex;
+                align-items: center; 
+                justify-content: start;
+
+
+                h3{
+                    margin-right: 2vh;
+                    
+                }
+                p{
+                    
+                    background-color: $colorPrincipal;
+                    padding: 1.5vh;
+                    border-radius: 5px;
+                    font-weight: 600;
+                    color: white;
+                    
+                }
+            }
+            #secAgregarAlCarrito{
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                height: 10vh;
+                
+                img{
+                    width: 5vh;
+                    margin-left: 1vh;
+                }
+            }
+            button{
+                width: 25vh;
+                height: 5vh;
+                background-color: $colorSecundario;
+                color: white;
+                border: none;
+                border-radius: 5px;                
+            }
+            #enviosGratis{
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                height: 10vh;
+                img{
+                    width: 5vh;
+                    margin-right: 2vh;
+                }
+            }
+            #btnCalcularEnvio{
+                width: 15vh;
+                background-color: $colorSecundario;
+            }
+        }
+        
+    }
+}
+
+@media (max-width: 1600px){
+    #secPcOferta{
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 30vh !important;
+            height: 30vh !important;
+            margin-right: 5vh;
+        }
+        
+        #infoPcOferta{
+            #tituloPcOferta{
+                display: flex;
+                align-items: center; 
+                justify-content: start;
+
+
+                h3{
+                    margin-right: 2vh;
+                    
+                }
+            }
+            #secAgregarAlCarrito{
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                height: 10vh;
+                
+                img{
+                    width: 5vh !important;
+                    margin-left: 1vh;
+                }
+            }
+            button{
+                width: 25vh;
+                height: 5vh;
+                background-color: $colorSecundario;
+                color: white;
+                border: none;
+                border-radius: 5px;                
+            }
+            #enviosGratis{
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                height: 10vh;
+                img{
+                    width: 5vh !important;
+                    margin-right: 2vh;
+                }
+            }
+            #btnCalcularEnvio{
+                width: 15vh;
+                background-color: $colorSecundario;
+                font-size: 0.6rem;
+            }
+
+        }
+        
+    }
+}
+
+@media (max-width: 1400px){
+    #secPcOferta{
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 20vh !important;
+            height: 17vh !important;
+            margin-right: 5vh;
+        }
+        
+        #infoPcOferta{
+            width: 60vh;
+            #tituloPcOferta{
+                display: flex;
+                font-size: 1.2rem;
+                
+            }
+        }   
+    }
+}
+
+@media (max-width: 1200px){
+    #secPcOferta{
+        width: 70vh;
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 20vh !important;
+            height: 17vh !important;
+            margin-right: 5vh;
+        }
+        
+        #infoPcOferta{
+            width: 30vh;
+            #tituloPcOferta{
+                display: flex;
+                font-size: 1rem;
+                
+            }
+        }
+    }
+}
+
+@media (max-width: 992px){
+    #secPcOferta{
+        width: 50vh;
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 20vh !important;
+            height: 17vh !important;
+            margin-right: 5vh;
+        }
+        
+        #infoPcOferta{
+            width: 20vh;
+            #tituloPcOferta{
+                display: flex;
+                font-size: 1rem;
+                
+            }
+        }
+    }
+}
+
+@media (max-width: 800px){
+    #mainPagePcOfertas{
+        aside{
+            margin-left: 1vh;
+            h2{
+                font-family: lemon-login;
+            }
+        }
+    }
+    #secPcOferta{
+        width: 40vh;
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 20vh !important;
+            height: 17vh !important;
+            
+        }
+        
+        #infoPcOferta{
+            width: 14vh;
+            #tituloPcOferta{
+                display: flex;
+                font-size: 0.7rem !important;
+                
+            }
+            h3{
+                font-size: 1rem !important;
+            }
+        }
+        button{
+            width: 15vh !important;
+            height: 5vh;
+            background-color: $colorSecundario;
+            color: white;
+            border: none;
+            border-radius: 5px;                
+        }
+        #secAgregarAlCarrito{
+            button{
+                font-size: 0.5rem;
+            }
+            img{
+                width: 0px;
+                height: 0px !important;
+            }
+        }
+        #enviosGratis{
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            height: 10vh;
+            font-size: 0.7rem !important;
+            img{
+                width: 5vh;
+                margin-right: 2vh;
+            }
+        }
+        #btnCalcularEnvio{
+            width: 15vh;
+            background-color: $colorSecundario;
+        }
+    }
+}
+    
+@media (max-width: 768px){
+    #mainPagePcOfertas{
+        aside{
+            margin-left: 3vh;
+            width: 20vh;
+            h2{
+                font-family: lemon-login;
+            }
+        }
+    }
+    #secPcOferta{
+        width: 40vh;
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 20vh !important;
+            height: 17vh !important;
+            
+        }
+        
+        #infoPcOferta{
+            width: 14vh;
+            #tituloPcOferta{
+                display: flex;
+                font-size: 0.7rem !important;
+                
+            }
+            h3{
+                font-size: 1rem !important;
+            }
+        }
+        button{
+            width: 15vh !important;
+            height: 5vh;
+            background-color: $colorSecundario;
+            color: white;
+            border: none;
+            border-radius: 5px;                
+        }
+        #secAgregarAlCarrito{
+            button{
+                font-size: 0.5rem;
+            }
+            img{
+                width: 0px;
+                height: 0px !important;
+            }
+        }
+        #enviosGratis{
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            height: 10vh;
+            font-size: 0.7rem !important;
+            img{
+                width: 5vh;
+                margin-right: 2vh;
+            }
+        }
+        #btnCalcularEnvio{
+            width: 15vh;
+            background-color: $colorSecundario;
+        }
+    }
+}
+
+@media (max-width: 600px){
+    #mainPagePcOfertas{
+        aside{
+            margin-left: 3vh;
+            width: 15vh;
+            font-size: 0.7rem;
+            h2{
+                font-family: lemon-login;
+            }
+        }
+    }
+    #secPcOferta{
+        width: 40vh;
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 15vh !important;
+            height: 15vh !important;
+            
+        }
+        
+        #infoPcOferta{
+            width: 10vh;
+            #tituloPcOferta{
+                display: flex;
+                font-size: 0.7rem !important;
+                
+            }
+            h3{
+                font-size: 1rem !important;
+            }
+        }
+        button{
+            width: 15vh !important;
+            height: 5vh;
+            background-color: $colorSecundario;
+            color: white;
+            border: none;
+            border-radius: 5px;                
+        }
+        #secAgregarAlCarrito{
+            button{
+                font-size: 0.5rem;
+            }
+
+        }
+        #enviosGratis{
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            height: 10vh;
+            font-size: 0.7rem !important;
+            img{
+                width: 5vh;
+                margin-right: 2vh;
+            }
+        }
+        #btnCalcularEnvio{
+            width: 15vh;
+            background-color: $colorSecundario;
+        }
+    }
+    #descripcionPcOferta{
+        font-family: lemon-login;
+        display: flex;
+        flex-direction: column;
+        margin-left: 35vh;
+        align-items: start;
+        border-top: 1px solid black;
+        p{
+            font-size: 0.5rem;
+        }
+        ul{
+            li{
+                p{
+                    font-size: 0.7rem !important;
+                }
+            }
+        }
+    }
 }
