--- a/scss/modules/page_pcOfertas/_mainPcOfertas.scss
+++ b/scss/modules/page_pcOfertas/_mainPcOfertas.scss
@@ -580,3 +580,67 @@
         }
     }
 }
+
+@media (max-width: 490px){
+    #mainPagePcOfertas{
+        aside{
+            margin-left: 3vh;
+            width: 15vh;
+            font-size: 0.7rem;
+            h2{
+                font-family: lemon-login;
+            }
+        }
+    }
+    #secPcOferta{
+        width: 40vh;
+        font-family: lemon-login;
+        display: flex;
+        img{
+            width: 10vh !important;
+            height: 10vh !important;
+            
+        }
+        
+        #infoPcOferta{
+            width: 10vh;
+            #tituloPcOferta{
+                display: flex;
+                font-size: 0.7rem !important;
+                
+            }
+            h3{
+                font-size: 1rem !important;
+            }
+        }
+        button{
+            width: 15vh !important;
+            height: 5vh;
+            background-color: $colorSecundario;
+            color: white;
+            border: none;
+            border-radius: 5px;                
+        }
+        #secAgregarAlCarrito{
+            button{
+                font-size: 0.5rem;
+            }
+
+        }
+        #enviosGratis{
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            height: 10vh;
+            font-size: 0.7rem !important;
+            img{
+                width: 5vh;
+                margin-right: 2vh;
+            }
+        }
+        #btnCalcularEnvio{
+            width: 15vh;
+            background-color: $colorSecundario;
+        }
+    }
+}
