--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -5,7 +5,7 @@ $colorSecundario: #7cc5e7;
 
 @font-face{
     font-family: lemon-titulo;
-    src: url(/assets/fonts/LEMONMILK-RegularItalic.otf);
+    src: url(../../fonts/LEMONMILK-RegularItalic.otf);
 }
 @font-face{
     font-family: lemon-login;
