--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
   font-family: lemon-login;
   src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
 body {
   background-color: rgb(247, 242, 242);
   margin: 0;
