--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,14 @@ footer {
   font-family: lemon-login;
   src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
 header {
   background-image: linear-gradient(to top, #687c91 0%, rgb(80, 71, 71) 100%);
   display: flex;
