--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: lemon-titulo;
-  src: url(../fonts/LEMONMILK-RegularItalic.otf);
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
 }
 @font-face {
   font-family: lemon-login;
-  src: url(../fonts/LEMONMILK-LightItalic.otf);
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
 body {
   background-color: rgb(247, 242, 242);
@@ -1078,6 +1078,14 @@ footer section p {
     width: 15vh;
     background-color: #7cc5e7;
   }
+}
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
 #mainAyuda {
   display: flex;
