--- a/scss/modules/_body.scss
+++ b/scss/modules/_body.scss
@@ -1,5 +1,14 @@
 @import "./mixins";
 
+@font-face{
+    font-family: lemon-titulo;
+    src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face{
+    font-family: lemon-login;
+    src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
+
 body{
     background-color: rgb(247, 242, 242);
     @include reset;
