--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -1,5 +1,14 @@
 @import "./variables";
 
+
+@font-face{
+    font-family: lemon-titulo;
+    src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face{
+    font-family: lemon-login;
+    src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
 footer{
     display: flex;
     flex-direction: column;
