--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,12 @@
 @import "./modules/page_productos/mainProductos";
 @import "./modules/page_pcOfertas/mainPcOfertas";
 @import "./modules/page_ayuda/ayuda";
+
+@font-face{
+    font-family: lemon-titulo;
+    src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face{
+    font-family: lemon-login;
+    src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
