--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: lemon-titulo;
-  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+  src: url(../fonts/LEMONMILK-RegularItalic.otf);
 }
 @font-face {
   font-family: lemon-login;
