--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
   font-family: lemon-login;
   src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
 body {
   background-color: rgb(247, 242, 242);
   margin: 0;
@@ -34,6 +42,14 @@ footer {
   grid-area: footer;
 }
 
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
 @font-face {
   font-family: lemon-titulo;
   src: url(../../fonts/LEMONMILK-RegularItalic.otf);
@@ -108,6 +124,14 @@ header #logIn a:hover {
   font-family: lemon-login;
   src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
 nav {
   background-color: #687c91;
   display: flex;
@@ -158,6 +182,14 @@ nav #navBtn a:hover {
     border: none;
     border-radius: 2px;
   }
+}
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
 @font-face {
   font-family: lemon-titulo;
@@ -359,6 +391,14 @@ main #infoContacto img {
   #infoContacto img {
     width: 4vh;
   }
+}
+@font-face {
+  font-family: lemon-titulo;
+  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face {
+  font-family: lemon-login;
+  src: url(../../fonts/LEMONMILK-LightItalic.otf);
 }
 @font-face {
   font-family: lemon-titulo;
