--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -2,3 +2,12 @@ $colorFooter: #686466;
 $colorPrincipal:  #687c91;
 $colorSecundario: #7cc5e7;
 
+
+@font-face{
+    font-family: lemon-titulo;
+    src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+}
+@font-face{
+    font-family: lemon-login;
+    src: url(../../fonts/LEMONMILK-LightItalic.otf);
+}
