--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,11 @@
 @import "./modules/page_pcOfertas/mainPcOfertas";
 @import "./modules/page_ayuda/ayuda";
 
+@font-face {
+    font-family: lemon-titulo;
+    src: url(../fonts/LEMONMILK-RegularItalic.otf);
+  }
+  @font-face {
+    font-family: lemon-login;
+    src: url(../../fonts/LEMONMILK-LightItalic.otf);
+  }
