--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,12 @@
 @font-face {
   font-family: lemon-titulo;
-  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
+  src: url(../fonts/LEMONMILK-RegularItalic.otf);
 }
 @font-face {
   font-family: lemon-login;
-  src: url(../../fonts/LEMONMILK-LightItalic.otf);
+  src: url(../fonts/LEMONMILK-LightItalic.otf);
 }
-@font-face {
-  font-family: lemon-titulo;
-  src: url(../../fonts/LEMONMILK-RegularItalic.otf);
-}
-@font-face {
-  font-family: lemon-login;
-  src: url(../../fonts/LEMONMILK-LightItalic.otf);
-}
+
 body {
   background-color: rgb(247, 242, 242);
   margin: 0;
