--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,5 +14,5 @@
   }
   @font-face {
     font-family: lemon-login;
-    src: url(../../fonts/LEMONMILK-LightItalic.otf);
+    src: url(../fonts/LEMONMILK-LightItalic.otf);
   }
