--- a/css/style.css
+++ b/css/style.css
@@ -1107,7 +1107,7 @@ footer section p {
 }
 @font-face {
   font-family: lemon-login;
-  src: url(../../fonts/LEMONMILK-LightItalic.otf);
+  src: url(../fonts/LEMONMILK-LightItalic.otf);
 }
 
 /*# sourceMappingURL=style.css.map */
